--- a/todo
+++ b/todo
@@ -1,7 +1,8 @@
 https://symfony.com/doc/current/components/serializer.html#converting-property-names-when-serializing-and-deserializing
-Factories
-KernelView
 data_collector
+encryption
+Factories
+KernelView events
 
 
 
