--- a/todo
+++ b/todo
@@ -1,11 +1,12 @@
 [In progress]
 Basics:
-    Routing... almost done
     Form... in progress
 
 [Done]
+Started:
+- Routing
 Components:
-    Process
+- Process
 
 ---
 FosRestBundle
