--- a/todo
+++ b/todo
@@ -1,12 +1,11 @@
 [In progress]
-Started: 
-    Controller...
 Basics:
     Form... in progress
 
 [Done]
 Started: 
 - Routing
+- Controller
 Components:
 - Process
 
