--- a/todo
+++ b/todo
@@ -1,10 +1,10 @@
 [In progress]
-Archi:
-    Service DI
 Basics:
     Form... in progress
 
 [Done]
+Archi:
+- Service DI
 Started: 
 - Routing
 - Controller
