--- a/todo
+++ b/todo
@@ -1,10 +1,10 @@
 [Progress]
-Basic: Logger, Errors-debug
+Basic: Errors-debug
 
 [DONE]
 Started: Setup, Page, Routing-url, Controller, Template, Config-env-vault
 Archi: HttpKernel-RqRp, Service-DI, Events, Bundles
-Basics: Doctrine, Forms, Tests, Session, Cache
+Basics: Doctrine, Forms, Tests, Session, Cache, Logger
 Components: Process
 
 ---
