--- a/todo
+++ b/todo
@@ -7,6 +7,7 @@ Archi: HttpKernel-RqRp, Service-DI, Events, Bundles
 Basics: Doctrine, Forms, Tests, Session, Cache, Logger, Errors-debug
 Advanced: Console, Mailer, Validate, Messaging, Notification, Serializer, i18n
 Security: User, Provider, Checker, Token, Voter
+Utilities: HttpClient
 Components: Process
 
 ---
